src/objects/AddCampaignMembersByReportSetting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Designed to match report id&apos;s to campaign id&apos;s. Used by apex report notification classes or scheduleable apex to automate adding contacts or leads from a report to a campaign when the report runs. The &apos;Name&apos; of each custom setting record must be the 15 character ID of the saved report that includes the contact or lead record ids to add as campaign members. The apex code looks up this campaign ID cross-reference based on the report it is subscribed to.</description>
    <fields>
        <fullName>Campaign_ID__c</fullName>
        <description>The 15 character campaign id, usually copied from the end of the URL of the campaign record.</description>
        <inlineHelpText>The 15 character campaign id, usually copied from the end of the URL of the campaign record.</inlineHelpText>
        <label>Campaign ID</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Member_Added_Status__c</fullName>
        <description>The Campaign Member Status to use if a contact or lead is being added new to the campaign (does not already exist as a member). If blank then Salesforce will use the default configured on the Campaign.</description>
        <inlineHelpText>The Campaign Member Status to use if a contact or lead is being added new to the campaign (does not already exist as a member). If blank then Salesforce will use the default configured on the Campaign.</inlineHelpText>
        <label>Campaign Member Added Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Contact_or_Lead_ID_Column_Label__c</fullName>
        <description>The column label on the report that holds the contact or lead record id to add to the campaign. The report should only include at most one column with this label heading and the value must be the record id (not a text or formula field). Example, if the column label is &quot;Contact ID&quot; that report field must either pull from the Contact ID field (Contact.Id) or a lookup field to Contact object like OpportunityContactRole.ContactId. Same applies for Lead ID report columns.</description>
        <inlineHelpText>The column label on the report that holds the contact or lead record id to add to the campaign. The report should only include at most one column with this label heading and the value must be the record id or lookup field (not a text or formula field).</inlineHelpText>
        <label>Report Contact or Lead ID Column Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Contact_or_Lead_ID_Column_Name__c</fullName>
        <description>The unique column name on the report that holds the contact or lead record id to add to the campaign. The report should only include at most one column with this name heading and the value must be the record id (not a text or formula field). Example, if the column label is &quot;Contact ID&quot; the unique name is likely &quot;CONTACT_ID&quot; and that report field must either pull from the Contact ID field (Contact.Id) or a lookup field to Contact object like OpportunityContactRole.ContactId. Same applies for Lead ID report columns.</description>
        <inlineHelpText>The column name on the report that holds the contact or lead record id to add to the campaign. The report should only include at most one column with this name heading and the value must be the record id or lookup field (not a text or formula field).</inlineHelpText>
        <label>Report Contact or Lead ID Column Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Add Campaign Members by Report Setting</label>
</CustomObject>